packages/compiler-rs/tests/snapshots/v_for__object_value_key_and_index.snap
---
source: tests/v_for.rs
expression: code
---
import { setNodes as _setNodes } from "vue-jsx-vapor";
import { child as _child, createFor as _createFor, template as _template } from "vue";
const t0 = _template("<span> </span>");
(() => {
  const n0 = _createFor(() => items, (_for_item0, _for_key0, _for_index0) => {
    const n2 = t0();
    const x2 = _child(n2);
    _setNodes(x2, () => id, () => _for_item0.value, () => _for_index0.value);
    return n2;
  }, (value, key, index) => id);
  return n0;
})();
